[project]
name = "bank_pay"
version = "2.0.0"
description = "Unified payment gateway for Frappe LMS - Bank Transfer & PayHere"
authors = [{name = "SL Tax Solution", email = "info@sltaxsolution.lk"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
